--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ function drawText()
 	g.ctx.fillText("Can you gerrymander for republicans? How about Democrats?", g.canvas.width / 1.47, g.canvas.height / 18 * 3.9);
 	g.ctx.fillText("Does the number of districts make it easier or harder?", g.canvas.width / 1.558, g.canvas.height / 18 * 4.8);
 	g.ctx.font = Math.floor(scale * 30 * fontMult) + "px serif";
-	g.ctx.fillText("View preset victories by typing 1, 2, 3, 4", g.canvas.width / 1.71, g.canvas.height / 18 * 5.75);
+	g.ctx.fillText("View preset victories by typing 1, 2, 3, 4, 5", g.canvas.width / 1.68, g.canvas.height / 18 * 5.75);
 	g.ctx.font = Math.floor(scale * 40 * fontMult) + "px serif";
 	g.ctx.fillText("Results:", g.canvas.width / 2.24, g.canvas.height / 18 * 6.8);
 
@@ -463,6 +463,26 @@ function checkKey(e)
     			 1, 1, 1, 1, 1, 1, 1, 1, 1, 1];
     }
     else if (e.keyCode == '52')
+    {
+    	lines = [1, 1, 1, 1, 1,
+    			 0, 0, 0, 1, 0,
+    			 0, 0, 0, 0, 0,
+    			 1, 1, 1, 1, 0,
+    			 0, 0, 0, 1, 0,
+    			 0, 0, 0, 0, 0,
+    			 1, 1, 1, 1, 1,
+    			 0, 0, 0, 1, 0,
+    			 0, 0, 0, 0, 0,
+    			 1, 1, 1, 0, 0,
+    			 1, 1, 1, 1, 1,
+    			 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+    			 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+    			 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+    			 0, 1, 1, 0, 1, 1, 0, 1, 1, 0,
+    			 1, 0, 0, 1, 0, 0, 1, 0, 0, 0,
+    			 1, 1, 1, 1, 1, 1, 1, 1, 1, 1];
+    }
+    else if (e.keyCode == '53')
     {
     	for(var i=0; i<lines.length; i++)
     		lines[i] = isCorner(i);
